# sdl-components

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: doxygen-awesome.css
ext/SDL_FontCache/: README.md  SDL_FontCache.c  TODO.md
include/: component.h  constants.h  draw.h  style.h  types.h  window.h
include/components/: list.h  progressbar.h
include/sdlx/: component.h  constants.h  draw.h  style.h  window.h
include/sdlx/components/: list.h  progressbar.h
src/: component.c  draw.c  window.c
src/components/: list.c  progressbar.c
tests/: CMakeLists.txt  test_component.c  test_progressbar.c  test_window.c
